# rust-training

./: .env  .gitignore  Cargo.toml  README.md  _typos.toml  deny.toml  pyproject.toml  setup_tools.ps1  test.http
.github/workflows/: build.yml
assets/: index.html
chat/: config.yaml
chat/chat_core/: Cargo.toml
chat/chat_core/fixtures/: dec.pem  enc.pem  test.sql
chat/chat_core/src/: error.rs  lib.rs  main.rs
chat/chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat/chat_core/src/models/: chat.rs  message.rs  mod.rs  user.rs  workspace.rs
chat/chat_core/src/utils/: jwt.rs  mod.rs
chat/chat_server/: Cargo.toml
chat/chat_server/src/: config.rs  lib.rs  main.rs  openapi.rs
chat/chat_server/src/handlers/: auth.rs  chat.rs  file.rs  message.rs  mod.rs  user.rs
chat/chat_server/src/middlewares/: chat.rs  mod.rs
chat/chat_server/src/repos/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat/chat_server/src/requests/: chat.rs  message.rs  mod.rs  user.rs  workspace.rs
chat/chat_server/src/responses/: mod.rs
chat/chat_test/: Cargo.toml
chat/migrations/: 20251129082527_initial.sql  20251129083244_triggers.sql
chat/notify_server/: Cargo.toml  index.html
chat/notify_server/src/: config.rs  lib.rs  main.rs  notify.rs  sse.rs
cli/: Cargo.toml
cli/examples/: simple1.rs  simple2.rs
cli/fixtures/: base64_decode.txt  base64_encode.txt
cli/src/: lib.rs  main.rs  utils.rs
cli/src/opts/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
cli/src/process/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
conc/: Cargo.toml
conc/examples/: ametrics.rs  cmetrics.rs  dredis.rs  matrix.rs  simple3.rs  simple_c1.rs  simple_c2.rs
conc/src/: main.rs
conc/src/metrics/: amap.rs  cmap.rs  mod.rs
crm/: README.md  config.yaml
crm/crm_gateway/: Cargo.toml  build.rs
crm/crm_gateway/src/: client.rs  config.rs  lib.rs  server.rs
crm/crm_gateway/src/abi/: auth.rs  mod.rs
crm/crm_gateway/src/pb/: crm.rs  mod.rs
crm/crm_metadata/: Cargo.toml  build.rs
crm/crm_metadata/src/: config.rs  lib.rs  main.rs
crm/crm_metadata/src/abi/: mod.rs
crm/crm_metadata/src/pb/: metadata.rs  mod.rs
crm/crm_metadata/tests/: service.rs
crm/crm_send/: Cargo.toml  build.rs
crm/crm_send/src/: config.rs  lib.rs  main.rs
crm/crm_send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm/crm_send/src/pb/: mod.rs  notification.rs
crm/crm_send/tests/: service.rs
crm/crm_stat/: Cargo.toml  build.rs
crm/crm_stat/examples/: gen.rs
crm/crm_stat/src/: config.rs  lib.rs  main.rs
crm/crm_stat/src/abi/: mod.rs
crm/crm_stat/src/pb/: mod.rs  user_stat.rs
crm/crm_stat/tests/: service.rs
crm/fixtures/: data.sql  token
crm/migrations/: 20251217030150_initial.sql
crm/protos/crm/: message.proto  rpc.proto
crm/protos/metadata/: message.proto  rpc.proto
crm/protos/notification/: message.proto  rpc.proto
crm/protos/user-stat/: message.proto  rpc.proto
ecosystem/: Cargo.toml
ecosystem/examples/: axum_serde.rs  axum_tracing.rs  bytes.rs  chat.rs  error.rs  mininginx.rs  shortener.rs  tokio1.rs  tokio2.rs
redis/: Cargo.toml
redis/src/: main.rs  network.rs
redis/src/backend/: mod.rs
redis/src/cmd/: get.rs  hget.rs  hgetall.rs  hset.rs  mod.rs  set.rs  unknown.rs
redis/src/resp/: array.rs  bool.rs  bulk_string.rs  double.rs  frame.rs  integer.rs  map.rs  mod.rs  null.rs  set.rs  simple_error.rs  simple_string.rs
taotie/: Cargo.toml
taotie/examples/: arrow-serde.rs  ndjson.rs  pq.rs
