[workspace]
members = ["cli", "conc"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2", "query", "tracing"] }
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
] }
tower-http = { version = "0.6.6", features = [
    "compression-full",
    "cors",
    "trace",
    "fs",
] }
