[workspace]
members = ["cli", "conc", "ecosystem", "redis"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2", "query", "tracing"] }
bytes = "1.11.0"
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
dashmap = "6.1.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
] }
tower-http = { version = "0.6.6", features = [
    "compression-full",
    "cors",
    "trace",
    "fs",
] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
