[workspace]
members = [
    "chat/chat_core",
    "chat/chat_server",
    "chat/notify_server",
    "chat/chat_test",
    "cli",
    "conc",
    "ecosystem",
    "redis",
    "crm/crm_gateway",
    "crm/crm_metadata",
    "crm/crm_send",
    "crm/crm_stat",
]
resolver = "3"

[workspace.dependencies]
chat_core = { path = "chat/chat_core" }
chat_server = { path = "chat/chat_server" }
notify_server = { path = "chat/notify_server" }

crm_metadata = { path = "crm/crm_metadata" }
crm_send = { path = "crm/crm_send" }
crm_stat = { path = "crm/crm_stat" }

anyhow = "1.0.100"
axum = { version = "0.8.6", features = [
    "http2",
    "macros",
    "query",
    "tracing",
    "multipart",
] }
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
dashmap = "6.1.0"
futures = "0.3.31"
jwt-simple = { version = "0.12.13", default-features = false, features = [
    "pure-rust",
] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
prost = "0.14.1"
prost-types = "0.14.1"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring-webpki",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["codec"] }
tonic = { version = "0.14.2", features = ["tls-webpki-roots"] }
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "compression-full",
    "cors",
    "trace",
    "fs",
] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4", "v7"] }
