[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
toml = "0.9.8"
tokio = { workspace = true }
rand = "0.9.2"
