[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { workspace = true }
csv = { workspace = true }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
toml = "0.9.8"
tokio = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
