[package]
name = "ecosystem"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures-util = "0.3.31"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls-ring-webpki"] }
nanoid = "0.4.0"
