[package]
name = "redis"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
bytes = "1.10.1"
dashmap = { workspace = true }
futures = "0.3.31"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["codec"] }
