[package]
name = "taotie"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
arrow = { version = "57.1.0", features = ["prettyprint"] }
chrono = { workspace = true }
datafusion = { version = "51.0.0", features = ["serde"] }
parquet = "57.1.0"
polars = { version = "0.52.0", features = [
    "parquet",
    "timezones",
    "sql",
    "lazy",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
