[package]
name = "notify_server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chat_core = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
futures = "0.3.31"
futures-util = "0.3.31"
jwt-simple = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.145"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
