[package]
name = "crm_gateway"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
crm_metadata = { workspace = true }
crm_send = { workspace = true }
crm_stat = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-prost-build = { workspace = true }
