[package]
name = "crm_send"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
test-util = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
fake = { "version" = "4.4.0", "features" = ["derive", "chrono"] }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
crm_send = { workspace = true, features = ["test-util"] }
