[package]
name = "crm_stat"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
fake = { "version" = "4.4.0", "features" = ["derive", "chrono"] }
futures = { workspace = true }
http-body-util = { version = "0.1.3", optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
sqlx-db-tester = { version = "0.7.1", optional = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
crm_stat = { workspace = true, features = ["test-util"] }
